--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -7,10 +7,30 @@
     font-family:'Courier New', Courier, monospace;
 }
 
+
+p, h1{
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 .map{
     width: 100%;
-    background-color:rgb(82, 78, 78);
     height: 100%;
+    color: #fff; /* Cor do texto */
+}
+
+.background {
+    position: absolute;
+    background-image: url('https://img.freepik.com/fotos-premium/arte-do-jogo-para-jogos-de-tiro-em-primeira-pessoa-fps-plano-de-fundo-ia-generativa_28914-15843.jpg'); /* Caminho para sua imagem de fundo */
+    background-size: cover; /* Faz a imagem cobrir toda a tela */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita repetição da imagem */
+    height: 100%; /* Altura igual à altura da tela */
+    width: 100%; /* Largura igual à largura da tela */
+
+    filter: blur(5px) brightness(.5);;
+    z-index: -1;
 }
 
 form{
@@ -19,7 +39,6 @@ form{
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color:rgb(82, 78, 78);
     height: 100%;
     gap: 30px;
 
@@ -30,20 +49,38 @@ form{
 
     & input{
         font-size: 15px;
-        height: 25px;
+        height: 30px;
         border-radius: 5px;
+        font-family: "Orbitron", sans-serif;
+        font-optical-sizing: auto;
+        font-style: bold;
     }
 
     & button{
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 25px;
-        font-weight: bold;
         width: 150px;
         height: 40px;
-        border-radius: 5px;
-        border: 0;
+        background-color: #35c023;
+        color: #ffffff; 
+        border: none;
+        border-radius: 12px;
+        padding: 15px 30px;
+        font-size: 20px;
+        font-family: "Orbitron", sans-serif;
+        cursor: pointer;
+        transition: background-color 0.3s, transform 0.3s;
+    }
+
+    & button:hover {
+        background-color: #278a1a;
+        transform: scale(1.10);
+    }
+
+    & button:active {
+        background-color: #094917; /* Cor de fundo quando clicado */
+        transform: scale(0.95); /* Leve redução no botão ao clicar */
     }
 }
 
@@ -52,10 +89,10 @@ form{
     justify-content:space-between;
     font-size: 20px;
     padding: 15px;
-    border-radius: 5px;
     width: 32vw;
     height: 32vw;
     background-color: rgb(255, 255, 255);
+    border: 1px solid #3f3f3f;
 }
 
 table {
@@ -65,49 +102,39 @@ table {
 }
 
 table, th, td {
-    border: 1px solid #ddd;
+    border: 1px solid #3f3f3f;
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 th, td {
     padding: 10px;
     text-align: center;
+    border: 1px solid #3f3f3f;
 }
 
 th {
-    background-color: #f4f4f4;
+    background-color: #706f6f31;
     color: #333;
+    border: 1px solid #3f3f3f;
 }
 
 td {
     color: #555;
     cursor: pointer;
+    border: 1px solid #3f3f3f;
 }
 
-tr:nth-child(even) {
+.tbody>tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
-tr:hover {
-    background-color: #e9e9e9;
-}
-
-footer{
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 4vh;
-    background-color: rgba(0, 0, 0, 0.171);
-    color: white;
-    
-    & p{
-        font-size: 16px;
-        height: 16px;
-    }
+.tbody>tr:hover {
+    height: 80px;
+    background-color: #278a1a5b;
+    border-radius: 10px;
+    font-size: 20px;
 }
 
 .hud-game{
@@ -144,4 +171,56 @@ footer{
 
 .null{
     display: flex;
+}
+
+.popup {
+    position: fixed;
+    height: 45px;
+    top: 20px;
+    right: 20px;
+    background-color: #36f4463a;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 5px;
+    font-size: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    font-size: 15px;
+}
+
+.popup.show {
+    opacity: 1;
+}
+
+.popup.hidden {
+    display: none;
+}
+
+.loading-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 20px;
+    z-index: 1000;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.loading-popup>p{
+    height: 10px;
+}
+
+.loading-popup.show {
+    visibility: visible;
+    opacity: 1;
 }
